handel supplier categoies api
