# app/Http/Controllers/Api/SupplierController.php
@@ -1,11 +1,15 @@
 <?php
 
 namespace App\Http\Controllers\Api;
-use App\Http\Controllers\Controller;
-use Illuminate\Http\Request;
 use App\Models\Supplier;
+use App\Models\Sitesection;
+use Illuminate\Http\Request;
+use App\Http\Controllers\Controller;
 use App\Http\Resources\SupplierResource;
 use Illuminate\Support\Facades\Validator;
+use App\Http\Resources\SupplierSectionResource;
+use App\Models\Supplier_section;
+
 class SupplierController extends Controller
 {
 
@@ -63,6 +67,68 @@ class SupplierController extends Controller
         $Supplier->map(function($i) { $i->lang = 'en'; });
      }
      $Supplier->map(function($i) { $i->type = 'all'; });
+      return response($Supplier,200,['OK']);
+    }
+
+      /**
+     * @OA\Get(
+     *      path="/suppliers_section",
+     *      operationId="getsuppliersList",
+     *      tags={"suppliers"},
+     *      summary="Get list of sections with suppliers",
+     *      description="Returns list of sections with suppliers",
+     *      @OA\Parameter(
+     *          name="locale",
+     *          description="App Locale",
+     *          required=true,
+     *          in="header",
+     *          @OA\Schema(
+     *              type="string",
+     *              enum={"ar", "en"},
+     *              default="ar"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="not found"
+     *      ),
+     *     )
+     */
+    public function sectionsAndSupplier(Request $request)
+    {
+      $lang=$request->header('locale');
+      $all=Sitesection::select('site_sections.id as section_id','site_name_ar','site_name_en')
+      ->join('supplier_sections', 'supplier_sections.sitesection_id', '=', 'site_sections.id')
+      ->groupBy('section_id')
+      ->get();
+      //return response($all,200,['OK']);
+        
+      $Supplier=SupplierSectionResource::collection($all);
+
+      if($lang=='ar'){
+        $Supplier->map(function($i) { $i->lang = 'ar'; });
+     }else{
+        $Supplier->map(function($i) { $i->lang = 'en'; });
+     }
       return response($Supplier,200,['OK']);
     }
 
